--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "react-native-builder-bob": "^0.18.1",
     "release-it": "^14.2.2",
     "typescript": "^4.1.3"
-    },
+  },
   "peerDependencies": {
     "react": "*",
     "react-native": "*"
@@ -148,5 +148,8 @@
         }
       ]
     ]
+  },
+  "dependencies": {
+    "deprecated-react-native-prop-types": "^5.0.0"
   }
 }
